After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 636172 - imagefreeze: eos is not passed before a buffer arrives
imagefreeze: eos is not passed before a buffer arrives
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Windows
: Normal normal
: 0.10.27
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-11-30 22:16 UTC by David Hoyt
Modified: 2010-12-06 14:25 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fixes the issue (629 bytes, patch)
2010-11-30 22:17 UTC, David Hoyt
none Details | Review

Description David Hoyt 2010-11-30 22:16:44 UTC
In the case where there's a bad or corrupt image, jpegdec sends just an eos but no frame. imagefreeze subsequently doesn't pass it on and drops the event. This prevents the pipeline from stopping.
Comment 1 David Hoyt 2010-11-30 22:17:06 UTC
Created attachment 175585 [details] [review]
Fixes the issue
Comment 2 Mark Nauwelaerts 2010-12-06 14:25:41 UTC
commit 6e7474459a2eca111af737a5d2e063bb7bd1313d
Author: David Hoyt <dhoyt@llnl.gov>
Date:   Mon Dec 6 15:21:53 2010 +0100

    imagefreeze: pass along eos if received before buffer arrives
    
    Fixes #636172.