Fixes gst imagefreeze when decoders send EOS but not the image/buffer thus preventing the pipeline from stopping correctly. See https://bugzilla.gnome.org/show_bug.cgi?id=636172